--- a/src/styles/result.scss
+++ b/src/styles/result.scss
@@ -2,8 +2,7 @@
   background: white;
   border: 1px solid black;
   float: left;
-  padding: 0.5rem;
-  width: 320px;
+  padding: 5px;
 
   table {
     border-collapse: collapse;
