--- a/src/styles/status.scss
+++ b/src/styles/status.scss
@@ -1,3 +1,8 @@
+.status {
+  overflow: hidden;
+  position: relative;
+}
+
 .status-geek {
   display: block;
   margin: 0 auto;
